--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mljcl"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -10,3 +10,7 @@ reqwest = { version = "0.11.22", features = ["blocking", "json"] }
 serde = "1.0.189"
 serde_derive = "1.0.189"
 serde_json = "1.0.107"
+
+[features]
+default = ["full"] # Disables unneeded features for audiosurfscrobblerlib
+full = []
