--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mljcl"
-version = "0.2.2"
+version = "0.2.3"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -14,5 +14,6 @@ serde_derive = "1.0.189"
 serde_json = "1.0.107"
 
 [features]
-default = ["full"] # Disables unneeded features for audiosurfscrobblerlib
+default = ["full", "async"] # Disables unneeded features for audiosurfscrobblerlib
 full = []
+async = []
