--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mljcl"
-version = "0.2.3"
+version = "0.3.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -12,8 +12,8 @@ reqwest = { version = "0.11.22", features = ["blocking", "json"] }
 serde = "1.0.189"
 serde_derive = "1.0.189"
 serde_json = "1.0.107"
+tokio = { version = "1.33.0", features = ["macros"] }
 
 [features]
-default = ["full", "async"] # Disables unneeded features for audiosurfscrobblerlib
+default = ["full"] # Disables unneeded features for audiosurfscrobblerlib
 full = []
-async = []
