--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ reqwest = { version = "0.11.22", features = ["blocking", "json"] }
 serde = "1.0.189"
 serde_derive = "1.0.189"
 serde_json = "1.0.107"
+serde_qs = "0.12.0"
 tokio = { version = "1.33.0", features = ["macros"] }
 
 [features]
