--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ serde = "1.0.189"
 serde_derive = "1.0.189"
 serde_json = "1.0.107"
 serde_qs = "0.12.0"
-tokio = { version = "1.33.0", features = ["macros"] }
+tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
 
 [features]
 default = ["full"] # Disables unneeded features for audiosurfscrobblerlib
